# maksym-durak-bot

./: pyproject.toml  run.py
durak/bot/: app.py  bot.py  dispatcher.py  types.py
durak/bot/default/: router.py  views.py
durak/bot/middlewares/: helpers.py  user.py
durak/bot/router/: default.py  router.py
durak/bot/shared/views/: __init__.py  base.py  send_message.py
durak/default/application/services/: start.py
durak/game/domain/: constants.py  exceptions.py
durak/game/domain/model/: card.py  deck.py  game.py  player.py  turn.py
durak/infrastructure/storage/: entity.py  protocols.py  serializers.py
durak/infrastructure/storage/mongo/: client.py  dependency.py  storages.py
durak/infrastructure/storage/redis/: __init__.py  client.py  constants.py  lock.py
durak/settings/: __init__.py  dependency.py  settings.py
durak/shared/domain/: exceptions.py
durak/shared/domain/model/: base.py
durak/shared/utils/: decorators.py  types.py
durak/shared/utils/app/: app.py  types.py
durak/user/application/: dependency.py  middlewares.py  services.py
durak/user/application/services/: create_or_update.py
durak/user/domain/model/: user.py
durak/user/infrastructure/storage/: protocols.py  storage.py
tests/: conftest.py
tests/factories/: base.py
tests/factories/game/: card.py  game.py  player.py  turn.py
tests/unit/test_game/test_domain/test_model/: test_deck.py  test_player.py  test_turn.py
tests/unit/test_game/test_domain/test_model/test_game/: conftest.py  test_add_player.py  test_attack.py  test_defend.py  test_defender.py  test_end_turn.py  test_game_pick_defender.py  test_game_start.py  test_pass.py  test_take_cards.py
